--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,13 @@
           <ul class="portfolio-list list">
             <li class="item">
               <a>
-                <img src="./images/technokryak.jpg" alt="Технокряк" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/technokryak.jpg" alt="Технокряк" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Технокряк</h2>
                   <p class="work-text">Веб-сайт</p>
@@ -76,7 +82,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/poster.jpg" alt="Постер" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/poster.jpg" alt="Постер" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                
                 <div class="work">
                   <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
                   <p class="work-text">Дизайн</p>
@@ -85,7 +97,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/seafood.jpg" alt="Ресторан" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/seafood.jpg" alt="Ресторан" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Ресторан Seafood</h2>
                   <p class="work-text">Додаток</p>
@@ -94,7 +112,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Проєкт Prime</h2>
                   <p class="work-text">Маркетинг</p>
@@ -103,7 +127,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Проєкт Boxes</h2>
                   <p class="work-text">Додаток</p>
@@ -112,7 +142,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Inspiration has no Borders</h2>
                   <p class="work-text">Веб-сайт</p>
@@ -121,7 +157,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/limited-edition.jpg" alt="Видання Limited Edition" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/limited-edition.jpg" alt="Видання Limited Edition" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Видання Limited Edition</h2>
                   <p class="work-text">Дизайн</p>
@@ -130,7 +172,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Проєкт LAB</h2>
                   <p class="work-text">Маркетинг</p>
@@ -139,7 +187,13 @@
             </li>
             <li class="item">
               <a>
-                <img src="./images/business.jpg" alt="Growing Business" width="370" />
+                <div class="portfolio-overlay">
+                  <img src="./images/business.jpg" alt="Growing Business" width="370" />
+                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="work">
                   <h2 class="work-title">Growing Business</h2>
                   <p class="work-text">Додаток</p>
