--- a/index.html
+++ b/index.html
@@ -106,14 +106,23 @@
         <div class="container">
           <h2 class="gallery-title">Чим ми займаємося</h2>
           <ul class="gallery-list list">
-            <li>
-              <img src="./images/img1.jpg" alt="Ноутбук" width="370" height="294" />
+            <li class="gallery-thumb">
+            <img src="./images/img1.jpg" alt="Ноутбук" width="370" height="294" />
+            <h3 class="gallery-img-title">
+              Десктопні додатки
+            </h3>
             </li>
-            <li>
+            <li class="gallery-thumb">
               <img src="./images/img2.jpg" alt="Смартфон" width="370" height="294" />
+            <h3 class="gallery-img-title">
+              Мобільні додатки
+            </h3>
             </li>
-            <li>
+            <li class="gallery-thumb">
               <img src="./images/img3.jpg" alt="Планшет" width="370" height="294" />
+            <h3 class="gallery-img-title">
+              Дизайнерські рішення
+            </h3>
             </li>
           </ul>
         </div>
