--- a/index.html
+++ b/index.html
@@ -371,5 +371,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+
+    </div>
+    <div class="modal">
+      <button type="button" class="modal-close">X
+
+      </button>
+
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
