--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-
-    </div>
     <div class="modal">
-      <button type="button" class="modal-close" data-modal-close > <span>X
-      </span>
-      </button>
-
+            <button type="button" class="modal-close" data-modal-close>
+                   <svg class="modal-close-icon" width="18" height="18">
+                      <use href="./images/icons_.svg#icon-close-black-18dp"></use>
+                    </svg>
+            </button>
     </div>
+</div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
