--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         </div>
       </section>
       <section class="section properties">
-        
         <div class="container">
           <h2 class="hide">Наші якості</h2>
           <ul class="properties-list list">
@@ -107,22 +106,16 @@
           <h2 class="gallery-title">Чим ми займаємося</h2>
           <ul class="gallery-list list">
             <li class="gallery-thumb">
-            <img src="./images/img1.jpg" alt="Ноутбук" width="370" height="294" />
-            <h3 class="gallery-img-title">
-              Десктопні додатки
-            </h3>
+              <img src="./images/img1.jpg" alt="Ноутбук" width="370" height="294" />
+              <h3 class="gallery-img-title">Десктопні додатки</h3>
             </li>
             <li class="gallery-thumb">
               <img src="./images/img2.jpg" alt="Смартфон" width="370" height="294" />
-            <h3 class="gallery-img-title">
-              Мобільні додатки
-            </h3>
+              <h3 class="gallery-img-title">Мобільні додатки</h3>
             </li>
             <li class="gallery-thumb">
               <img src="./images/img3.jpg" alt="Планшет" width="370" height="294" />
-            <h3 class="gallery-img-title">
-              Дизайнерські рішення
-            </h3>
+              <h3 class="gallery-img-title">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
@@ -340,13 +333,13 @@
           <h3 class="soc-title">приєднуйтесь</h3>
           <ul class="footer-soc-list list">
             <li class="soc-link">
-              <a href="#" class="soc-link-item footer-soc-link ">
+              <a href="#" class="soc-link-item footer-soc-link">
                 <svg class="footer-icon" width="20px" height="20px">
                   <use href="./images/icons_.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class=" soc-link">
+            <li class="soc-link">
               <a href="#" class="soc-link-item footer-soc-link">
                 <svg class="footer-icon" width="20px" height="20px">
                   <use href="./images/icons_.svg#icon-twitter"></use>
@@ -372,14 +365,14 @@
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-            <button type="button" class="modal-close" data-modal-close>
-                   <svg class="modal-close-icon" width="18" height="18">
-                      <use href="./images/icons_.svg#icon-close-black-18dp"></use>
-                    </svg>
-            </button>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icons_.svg#icon-close-black-18dp"></use>
+          </svg>
+        </button>
+      </div>
     </div>
-</div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
