--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,11 @@
             <a class="nav-logo" href="./index.html">Web<span class="studio">Studio</span></a>
           </div>
           <ul class="nav-list list">
-            <li><a class="nav-list-item" href="./index.html">Студія</a></li>
+            <li><a class="nav-list-item" href="./index.html">
+              Студія
+              <div class="nav-item-after"></div>
+
+            </a></li>
             <li><a class="nav-list-item" href="./portfolio.html" target="_blank">Портфоліо</a></li>
             <li><a class="nav-list-item" href="#">Контакти</a></li>
           </ul>
