--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <a class="nav-logo" href="./index.html">Web<span class="studio">Studio</span></a>
           </div>
           <ul class="nav-list list">
-            <li><a class="nav-list-item" href="./index.html">Студія</a></li>
-            <li><a class="nav-list-item" href="./portfolio.html" target="_blank">Портфоліо</a></li>
-            <li><a class="nav-list-item" href="#">Контакти</a></li>
+            <li class="nav-list-link"><a class="nav-list-item current" href="./index.html">Студія</a></li>
+            <li class="nav-list-link"><a class="nav-list-item" href="./portfolio.html" target="_blank">Портфоліо</a></li>
+            <li class="nav-list-link"><a class="nav-list-item" href="#">Контакти</a></li>
           </ul>
         </nav>
 
