--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,11 @@
             <a class="nav-logo" href="./index.html">Web<span class="studio">Studio</span></a>
           </div>
           <ul class="nav-list list">
-            <li><a class="nav-list-item" href="./index.html">
+            <li  class="nav-list-link"><a class="nav-list-item list-studio" href="./index.html">
               Студія
-              <div class="nav-item-after"></div>
-
             </a></li>
-            <li><a class="nav-list-item" href="./portfolio.html" target="_blank">Портфоліо</a></li>
-            <li><a class="nav-list-item" href="#">Контакти</a></li>
+            <li class="nav-list-link"><a class="nav-list-item current" href="./portfolio.html" target="_blank">Портфоліо</a></li>
+            <li class="nav-list-link"><a class="nav-list-item" href="#">Контакти</a></li>
           </ul>
         </nav>
 
