--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,12 @@
             <a class="nav-logo" href="./index.html">Web<span class="studio">Studio</span></a>
           </div>
           <ul class="nav-list list">
-            <li  class="nav-list-link"><a class="nav-list-item list-studio" href="./index.html">
-              Студія
-            </a></li>
-            <li class="nav-list-link"><a class="nav-list-item current" href="./portfolio.html" target="_blank">Портфоліо</a></li>
+            <li class="nav-list-link">
+              <a class="nav-list-item list-studio" href="./index.html"> Студія </a>
+            </li>
+            <li class="nav-list-link">
+              <a class="nav-list-item current" href="./portfolio.html" target="_blank">Портфоліо</a>
+            </li>
             <li class="nav-list-link"><a class="nav-list-item" href="#">Контакти</a></li>
           </ul>
         </nav>
@@ -71,9 +73,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/technokryak.jpg" alt="Технокряк" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -86,11 +89,13 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/poster.jpg" alt="Постер" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
                 </div>
-                
+
                 <div class="work">
                   <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
                   <p class="work-text">Дизайн</p>
@@ -101,9 +106,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/seafood.jpg" alt="Ресторан" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -116,9 +122,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -131,9 +138,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -145,10 +153,15 @@
             <li class="item">
               <a>
                 <div class="portfolio-overlay">
-                  <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -160,10 +173,15 @@
             <li class="item">
               <a>
                 <div class="portfolio-overlay">
-                  <img src="./images/limited-edition.jpg" alt="Видання Limited Edition" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <img
+                    src="./images/limited-edition.jpg"
+                    alt="Видання Limited Edition"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -176,9 +194,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
@@ -191,9 +210,10 @@
               <a>
                 <div class="portfolio-overlay">
                   <img src="./images/business.jpg" alt="Growing Business" width="370" />
-                  <p class="portfolio-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                    дозволить відвідувачу отримати
-                    вичерпні відомості про компанію чи приватну особу.
+                  <p class="portfolio-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work">
